[gd_scene load_steps=4 format=3 uid="uid://c2vpgf8m0otu0"]

[ext_resource type="Script" path="res://Scripts/ask_player_number_scene.gd" id="1_bnu64"]
[ext_resource type="Texture2D" uid="uid://csepvlklhmxn8" path="res://Images/bg_640x480.png" id="2_n3y28"]
[ext_resource type="Texture2D" uid="uid://c01c58vydokyh" path="res://Images/menu_button_empty.png" id="3_lxitl"]

[node name="ask_player_number_scene" type="Node2D"]
script = ExtResource("1_bnu64")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n3y28")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 272.0
offset_top = 179.0
offset_right = 517.0
offset_bottom = 264.0
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
text = "Must be a value 2-6!"
tab_size = 11

[node name="MainMenuContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 272.0
offset_top = 245.0
offset_right = 517.0
offset_bottom = 543.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="MainMenuContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "How many players?
Default: 3"
wrap_mode = 1

[node name="ConfirmButton" type="Button" parent="MainMenuContainer"]
layout_mode = 2
text = "OK"
icon = ExtResource("3_lxitl")
flat = true
icon_alignment = 1
text_direction = 1

[node name="BackButton" type="Button" parent="MainMenuContainer"]
layout_mode = 2
text = "BACK"
icon = ExtResource("3_lxitl")
flat = true
icon_alignment = 1

[connection signal="pressed" from="MainMenuContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="MainMenuContainer/BackButton" to="." method="_on_back_button_pressed"]
